# mom-ai

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  label_encoder.pkl  mom_ai_model.pkl  pyproject.toml  replit.md  technical_summary.md  train_model.py
.github/workflows/: ci-cd.yml
.local/skills/resolve_rebase_conflict/: SKILL.md
.local/state/replit/: log-query.db-shm  log-query.db-wal
.upm/: store.json
attached_assets/: Pasted--How-Many-Pages-You-Actually-Need-Only-3-Pages-Home-Pag_1771916316296.txt  Pasted--MOM-AI-Maternal-Risk-Prediction-ML-Model--177191635197_1771916351978.txt
django_project/: settings.py  urls.py
predictor/: forms.py  views.py
predictor/templates/predictor/: form.html  home.html  result.html
