[tool.poetry]
name = "mom-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^4.2.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
numpy = "^1.24.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
